# randomized-trace-logdet-diag

./: README.md  pyproject.toml  requirements.txt  setup.py
dev/: Ainv_cg_op.ipynb  checking.ipynb  cupy_testing.ipynb  hutchinson_plus_plus.ipynb  hutchinson_trace.ipynb  randomized_logdet.ipynb  simple_diag.ipynb  simple_diaginv.ipynb  simple_logdet.ipynb  traceinv.ipynb
src/rtld/: __init__.py
src/rtld/trace/: hutchinson_trace.py
src/tracelogdetdiag/diag/: __init__.py  diag.py  explicit.py
src/tracelogdetdiag/diaginv/: __init__.py  diaginv.py  explicit.py
src/tracelogdetdiag/logdet/: __init__.py  explicit.py  stochastic_chebyshev.py  util.py
src/tracelogdetdiag/trace/: __init__.py  explicit.py  hutchinson_trace.py
src/tracelogdetdiag/util/: AinvCGLinearOperator.py  __init__.py  cg.py
