[build-system]
requires = ["setuptools>=59.2.0", "numpy", "scipy"]
build-backend = "setuptools.build_meta"

[project]
name = "tracelogdetdiag"
version = "0.0.1"
authors = [
  { name="Jonathan Lindbloom", email="jonathan@lindbloom.com" },
]
description = "Some implementations of randomized, matrix-free algorithms for estimating matrix traces, log determinants, diagonals, and diagonals of inverses."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["linear algebra", "log determinant", "trace", "randomized estimators"]

[project.urls]
"Homepage" = "https://github.com/jlindbloom/randomized-trace-logdet-diag-diaginv"
"Bug Tracker" = "https://github.com/jlindbloom/randomized-trace-logdet-diag-diaginv/issues"
